<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">


    <TextView
        android:id="@+id/text_view_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="112dp"
        android:text="Game Over"
        android:textSize="50dp" />
    <ImageButton
        android:id="@+id/playBtn"
        android:layout_width="180dp"
        android:layout_height="80dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="236dp"
        android:contentDescription="@string/playBtn"
        app:srcCompat="@drawable/playgamebtn" />

    <ImageButton
        android:id="@+id/showScoreBtn"
        android:layout_width="180dp"
        android:layout_height="80dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="138dp"
        android:contentDescription="@string/scoreBtn"
        app:srcCompat="@drawable/scorebtn" />

    <ImageButton
        android:id="@+id/settingBtn"
        android:layout_width="180dp"
        android:layout_height="80dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="36dp"
        android:contentDescription="@string/settingBtn"
        app:srcCompat="@drawable/settingbtn" />

</RelativeLayout>