<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="324dp"
        android:layout_height="225dp"
        android:layout_marginEnd="30dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="40dp"
        android:contentDescription="@string/racing_flag_img"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/racingflagimg" />

    <ImageButton
        android:id="@+id/imageButton2"
        android:layout_width="180dp"
        android:layout_height="80dp"
        android:layout_marginEnd="102dp"
        android:layout_marginLeft="102dp"
        android:layout_marginRight="102dp"
        android:layout_marginStart="102dp"
        android:layout_marginTop="30dp"
        android:contentDescription="@string/playBtn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView2"
        app:srcCompat="@drawable/playgamebtn" />

    <ImageButton
        android:id="@+id/imageButton5"
        android:layout_width="180dp"
        android:layout_height="80dp"
        android:layout_marginEnd="102dp"
        android:layout_marginLeft="102dp"
        android:layout_marginRight="102dp"
        android:layout_marginStart="102dp"
        android:layout_marginTop="10dp"
        android:contentDescription="@string/scoreBtn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageButton2"
        app:srcCompat="@drawable/scorebtn" />

    <ImageButton
        android:id="@+id/imageButton7"
        android:layout_width="180dp"
        android:layout_height="80dp"
        android:layout_marginBottom="24dp"
        android:layout_marginEnd="102dp"
        android:layout_marginLeft="102dp"
        android:layout_marginRight="102dp"
        android:layout_marginStart="102dp"
        android:layout_marginTop="10dp"
        android:contentDescription="@string/settingBtn"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageButton5"
        app:layout_constraintVertical_bias="0.06"
        app:srcCompat="@drawable/settingbtn" />

</android.support.constraint.ConstraintLayout>